--- a/native/solana/Cargo.toml
+++ b/native/solana/Cargo.toml
@@ -9,7 +9,8 @@ name = "solana"
 crate-type = ["cdylib"]
 
 [dependencies]
+mpl-bubblegum = "1.4.0"
 rustler = "0.36.1"
-solana-client = "2.2.1"
-solana-program = "2.2.1"
-solana-sdk = "2.2.1"
+solana-client = "1.14"
+solana-program = "1.14"
+solana-sdk = "1.14"
